# maxlang

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/src/eblang/: array.cpp  array.h  context.h  expression.cpp  expression.h  function.h  lexer.cpp  lexer.h  parser.cpp  parser.h  stdlib.h  token.h  util.h  value.cpp  value.h
lib/src/maxlang/: array.cpp  array.h  context.h  expression.cpp  expression.h  function.h  lexer.cpp  lexer.h  parser.cpp  parser.h  state.cpp  state.h  stdlib.cpp  token.h  util.cpp  util.h  value.cpp  value.h
lib/test/: LexerTest.cpp  MaxlangTest.cpp
programs/: Imba_project.max  Imba_project.mpp
src/: main.cpp
